app/assets/stylesheets/application.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
@import "actiontext.css";

/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS (and SCSS, if configured) file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 *= require simple_calendar
 */

/* Style for the overall calendar */
.simple-calendar {
    font-family: Arial, sans-serif;
}

/* Style for individual days */
.simple-calendar .day {
    padding: 5px;
    border: 1px solid #ccc;
}

/* Style for weekdays (0 for Sunday, 1 for Monday, etc.) */
.simple-calendar .wday-0 { /* Sunday */
    color: red;
}

.simple-calendar .wday-1 { /* Monday */
    color: blue;
}

/* Continue for other weekdays as needed */

/* Style for today's date */
.simple-calendar .today {
    background-color: #ffc;
}

/* Style for past dates */
.simple-calendar .past {
    color: #999;
}

/* Style for future dates */
.simple-calendar .future {
    color: #333;
}

/* Style for the start date of a range */
.simple-calendar .start-date {
    font-weight: bold;
}

/* Style for previous month's dates */
.simple-calendar .prev-month {
    color: #bbb;
}

/* Style for next month's dates */
.simple-calendar .next-month {
    color: #bbb;
}

/* Style for dates within the current month */
.simple-calendar .current-month {
    /* No additional styling */
}

/* Style for dates with events */
.simple-calendar .has-events {
    width: 14%;
}

/* Style for calendar date */
.simple-calendar .calendar-date {
    width: fit-content;
    margin: 0;
    padding: 0;
}

.simple-calendar .calendar-col {
    width: 100%;
    display: inline-block;
    vertical-align: top;
    margin: 0;
    padding: 0;
}

/* Style for calendar events */
.simple-calendar .calendar-events {
    width: 100%;
    display: flex;
    flex-direction: column;
    padding-left: 0;
    padding-right: 0;
    margin: 0;
}

/* Style for events list */
.simple-calendar .calendar-events ul {
    list-style: none;
    padding: 0;
    margin: 0;
}

/* Style for individual event */
.simple-calendar .calendar-events li {
    margin: 0;
    margin-left: 0%;
    padding: 0;
    margin-bottom: 1%;
}

/* Style for event button */
.simple-calendar .calendar-events li button {
    width: 100%;
    margin: 0;
}

/* Style for calendar heading */
.simple-calendar .calendar-heading {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 10px;
}

/* Style for calendar heading */
.simple-calendar .calendar-heading {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 20px;
}

/* Style for calendar title */
.simple-calendar .calendar-title {
    font-size: 24px;
    margin-bottom: 10px;
}

/* Style for navigation links */
.simple-calendar nav {
    display: flex;
    justify-content: center;
    align-items: center;
}

.simple-calendar nav a {
    text-decoration: none;
    padding: 2%;
    border: 1px solid #ccc;
    border-radius: 5px;
    background-color: #f0f0f0;
    color: #333;
    margin: 0 5px;
    transition: background-color 0.3s ease;
}

/* Style for today's navigation link */
.simple-calendar nav a:nth-child(2) {
    background-color: #ffc;
}

/* Style for navigation links on hover */
.simple-calendar nav a:hover {
    background-color: #e0e0e0;
}


a {

    font-size: x-large;
    color: black;
    font-weight: bold;
}

.event-link {
    font-size: initial;
    color: inherit;
    font-weight: normal;
    text-decoration: none;
}

.flash__alert {
    color: red;
}

.flash__notice {
    color: blue;
}

.flash__success {
    color: green;
}


body {
    position: relative;
    background: linear-gradient(to bottom, rgba(237, 233, 232, 0.95), rgb(237, 233, 232)), url('mabs-modern-background.png');
    background-size: cover;
    padding-top: 56px; /* Padding for fixed navbar */
    background-color: rgba(255, 255, 255, 0.7);

}

.navbar-bg {
    background-color: #0b1739; /* Vibrant blue background for navbar */
    box-shadow: 0 2px 4px rgba(0, 0, 0, .1); /* Subtle shadow for depth */
}

.navbar-brand, .nav-link, .btn-outline-success {
    color: #fff !important; /* White text for better contrast */
}

.nav-item {
    border-radius: 10px;
}

.nav-item:hover {
    background-color: #152864; /* Dark grey */
    color: white; /* White text */
}

.card {
    box-shadow: 0 2px 4px rgba(0, 0, 0, .1); /* Consistent shadow for cards */
}

.card-header h3 {
    margin-bottom: 0; /* Adjust if necessary */
}

.card-body {
    background-color: #ffffff; /* White background for content */
}

.events-container {
    max-width: 100%;
    background-color: #ffffff;
    border-radius: 8px;
    box-shadow: 0 2px 5px rgba(0, 0, 0, .1);
}

.event-date {
    font-size: 16px;
}

.event-details {
    border-left: 4px solid #007bff;
    padding-left: 15px;
}

.event-title {
    font-size: 18px;
    margin-bottom: 5px;
}

.event-time, .event-location {
    font-size: 14px;
}

.points-summary-container {
    position: relative; /* Needed for absolute positioning inside */
}

.points-arch {
    height: 40px; /* Height of the arch */
    display: flex; /* Use flexbox to create the segments side by side */
    border-radius: 20px; /* Half the height to make a semi-circle */
    overflow: hidden; /* Hide anything outside the border-radius */
    box-shadow: 0 2px 4px rgba(0, 0, 0, .1); /* Subtle shadow for depth */
}

.arch-segment {
    flex: 1; /* Flex basis, this should be dynamic based on points */
    transition: flex-grow 0.5s ease-in-out; /* Smooth transition for changes */
}

.total-points-display {
    margin-top: 20px; /* Space between arch and total points text */
}

.total-points {
    font-weight: bold;
    font-size: 1.5rem; /* Larger font size for emphasis */
    color: #007bff; /* Dark color for contrast */
}

.points-value {
    color: #007bff; /* Theme color for the points value */
}

.user-profile {
    margin-bottom: 20px;
    padding: 15px;
    border: 1px solid #ccc;
    border-radius: 5px;
}

.profile {
    display: flex;
    align-items: center;
}

.profile-img {
    border: 2px solid black;
}


.rank {
    margin-right: 10px;
    font-weight: bold; /* Make rank text bold */
    color: #333; /* Set color for rank text */
}

.current-user-rank {
    margin-right: 10px;
    font-weight: bold; /* Make rank text bold */
    color: #333; /* Set color for rank text */
}

.profile img {
    width: 50px;
    height: 50px;
    border-radius: 50%;
}

.profile p {
    margin: 0;
}

.user-details {
    flex-grow: 1;
}

.full-name {
    font-size: 16px; /* Set font size for full name */
    color: #555; /* Set color for full name */
}

.points-summary {
    background-color: #ffffff; /* White background for the panel */
    border-radius: 10px; /* Rounded corners for the panel */
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
    color: #333333; /* Darker text for better readability */
}

.points-summary h4 {
    color: #007bff; /* Bootstrap primary color for the heading */
}

.btn-primary, .btn-info {
    margin: 0 5px; /* Spacing between buttons */
}

/* Additional styles for the buttons to make them modern and appealing */
.btn-primary, .btn-info {
    border: none;
    padding: 10px 20px;
    border-radius: 20px; /* Rounded edges for buttons */
    font-weight: bold;
}

/* Hover effect for buttons */
.btn-primary:hover, .btn-info:hover {
    transform: scale(1.05); /* Slight increase in size */
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2); /* Enhanced shadow for 3D effect */
}


.user-panel {
    position: fixed;
    right: -250px; /* Adjust width accordingly */
    top: 0;
    width: 250px; /* Adjust width accordingly */
    height: 100vh;
    background: #fff;
    box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
    transition: right 0.3s ease;
}

.user-panel.open {
    right: 0;
}

.user-panel-footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    padding: 10px;
    background: #f1f1f1;
    text-align: center;
}

.offcanvas-footer {
    padding: 10px 0;
    border-top: 1px solid #eaeaea;
}

.user-info h6 {
    margin-top: 10px;
    font-size: 1rem;
}

.user-info p {
    font-size: 0.9rem;
    color: #666;
}

.btn-settings {
    margin-top: 15px;
}

.points-history-container {
    max-height: 400px; /* Adjust based on your preference */
    overflow-y: auto; /* Enables scrolling if the list is long */
}

.point-details h6 {
    font-size: 1rem; /* Adjust the size as needed */
    color: #333; /* Dark text color for better readability */
}

.point-details p {
    font-size: 0.9rem; /* Slightly smaller font size for the description */
    color: #666; /* Lighter text color for the description */
}

.list-group-item {
    border-left: 3px solid #007bff; /* Adds a left border to each list item */
    margin-bottom: 0.5rem; /* Adds space between list items */
    background-color: #f8f9fa; /* Light background for the list items */
}

.badge {
    font-size: 0.9rem; /* Adjust the badge font size */
}

.header {
    font-family: 'Roboto', sans-serif; /* Use a web-friendly font */
    color: #333; /* A dark grey for good readability */
    font-size: 24px; /* Adjust size as needed */
    font-weight: 500; /* Medium weight for emphasis */
    margin-top: 40px; /* Add space above your headers */
    margin-bottom: 20px; /* Add space below your headers */
    padding-bottom: 10px; /* Optional: add some padding at the bottom */
    border-bottom: 2px solid #eee; /* Optional: add a subtle line under headers for definition */
}

.chart-container {
    max-width: 100vw;
    margin: auto;
}


.modal-header {
}

.modal-title {
    font-weight: bold;
}

.modal-body {
    background-color: #f0f2f5;
}

.detail-icon {
    color: #0056b3;
    margin-right: 8px;
}

.rsvp-header {
    font-size: 1.5rem;
    margin-top: 20px;
    margin-bottom: 10px;
    color: #0056b3;
}

.list-group-item {
    background-color: #f0f2f5;
    border: none;
}

.list-group-item:hover {
    background-color: #e2e6ea;
}

.read-more-link:hover {
    text-decoration: underline;
}

.line-clamp {
    display: -webkit-box;
    -webkit-line-clamp: 3; /* Adjust the number of lines as per requirement */
    -webkit-box-orient: vertical;
    overflow: hidden;
}

.announcement-body ul, .announcement-body ol {
    padding-left: 20px; /* Adjust the padding as per requirement */
}

h1 {
    font-family: 'Roboto', sans-serif; /* Google's Material Design font */
    color: #202124; /* Almost black but slightly softer, common in Google's designs */
    font-size: 2rem; /* Size that balances readability with information hierarchy */
    font-weight: 400; /* Normal weight to avoid heaviness */
    margin-bottom: 0.5rem; /* Reduced bottom margin for a tighter layout */
    padding-bottom: 0.25rem; /* Subtle padding at the bottom */
    border-bottom: 1px solid #e0e0e0; /* Light grey bottom border for a touch of separation */
    letter-spacing: normal; /* Default spacing to maintain readability */
}

.right-justified {
    text-align: right;
}

.buttons-row {
    display: flex;
    justify-content: flex-start; /* Align items to the start of the container */
    gap: 10px; /* Optional: adds some space between the buttons */
}

